[package]
name = "bitcoin-wallet-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
bdk = "0.28.0" # bdk = { version = "0.28.0", features = ["sqlite"] }
axum = { version = "0.6.1", features = ["macros"] }
tokio = { version = "1.24.1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"